--- a/index.html
+++ b/index.html
@@ -116,7 +116,26 @@
       </tbody>
     </table>
   </div>
+</tbody>
+    </table>
+  </div>
 
+	<div class="section">
+    <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 84)</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>N° Patrimônio</th>
+          <th>Descrição</th>
+          <th>Modelo</th>
+          <th>Unidade</th>
+          <th>Local</th>
+        </tr>
+      </thead>
+      <tbody>
+    </tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
 
   </tbody>
 </table>
@@ -125,4 +144,5 @@
 
 
 </body>
+
 </html>
