--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -130,9 +130,9 @@
         </tr>
       </thead>
       <tbody>
-    </tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
-	</tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
-	</tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+    </tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
 	     
 	     
 
@@ -151,4 +151,5 @@
 </body>
 
 </html>
+
 
