--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
         </tr>
       </thead>
       <tbody>
-    </tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
-	</tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
-	</tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400SW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+    </tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
+	</tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
 
   </tbody>
 </table>
@@ -146,3 +146,4 @@
 </body>
 
 </html>
+
