--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -140,16 +140,32 @@
       </tbody>
     </table>
   </div>
+<div class="section">
+    <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 85)</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>N° Patrimônio</th>
+          <th>Descrição</th>
+          <th>Modelo</th>
+          <th>Unidade</th>
+          <th>Local</th>
+        </tr>
+      </thead>
+      <tbody>
+    </tr><td>🔹128973994</td><td>Gateway para sistema VoIP - 04 portas</td><td>GRANDSTREAM/UCM6302</td><td>21 BPM</td><td>Ubá</td></tr>   
+        
+      </tbody>
+    </table>
+  </div>
 
 
   </tbody>
 </table>
 
-
-
-
 </body>
 
 </html>
+
 
 
