--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom, khaki 50%, black 50%);
       margin: 20px;
-      color: #D2B48C;
+      color: 000080;
     }
     h1 {
       color: #2c3e50;
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
