--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       color: 000080;
     }
     h1 {
-      color: #2c3e50;
+      color: f0e68c;
       text-align: center;
     }
     .section {
@@ -152,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
