--- a/index.html
+++ b/index.html
@@ -149,9 +149,28 @@
       </tbody>
     </table>
   </div>
+   <div class="section">
+    <h2>📦 DEMANDAS DA SAT/EM4ªRPM no CMB</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Descrição da Arma/Item</th>
+          <th>Agendamento PA</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr><td>🔹Revólver 2º Tenente QOR Webert – QE73243</td><td>202511111017827-2511</td><td>
+        <tr><td>🔹08 (oito) fuzis 7,62 NATO IWI ARAD R7</td><td>202511110978644-2511</td><td>
+        <tr><td>🔹Retirada de armas na manutenção pistola .40 (série - EKA41811)</td><td>202511111208739-2511</td><td>
+        <tr><td>🔹Entrega de arma para manutenção espingarda 12 (94774)</td><td>202511111218898-2511</td><td>
+
+      </tbody>
+    </table>
+  </div>
 
 </body>
 </html>
+
 
 
 
