--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
       </tbody>
     </table>
   </div>
+    <div class="section">
+    <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 86)</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>N° Patrimônio</th>
+          <th>Descrição</th>
+          <th>Modelo</th>
+          <th>Unidade</th>
+          <th>Local</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>🔹128934239</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
+        <tr><td>🔹128934247</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
+      </tbody>
+    </table>
+  </div>
    <div class="section">
     <h2>📦 DEMANDAS DA SAT/EM4ªRPM NO CMB</h2>
     <table>
@@ -170,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
