--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -166,6 +166,7 @@
       <tbody>
         <tr><td>🔹128934239</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
         <tr><td>🔹128934247</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
+        <tr><td>🔹128973862</td><td>Nobreak</td><td>CR/3KVA</td><td>47 BPM</td><td>CARANGOLA</td></tr>
       </tbody>
     </table>
   </div>
@@ -190,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
