--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <tbody>
         <tr><td>🔹128934239</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
         <tr><td>🔹128934247</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
+        <tr><td>🔹128934093</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>47 BPM</td><td>CARANGOLA</td></tr>
         <tr><td>🔹128973862</td><td>Nobreak</td><td>CR/3KVA</td><td>47 BPM</td><td>CARANGOLA</td></tr>
       </tbody>
     </table>
@@ -189,6 +190,7 @@
 
 </body>
 </html>
+
 
 
 
