--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹01</td><td>18226</td><td>HNH 1274</td><td>Caminhão VW/9.150</td><td>Juiz de Fora</td></tr>
+        <td>18226</td><td>HNH 1274</td><td>Caminhão VW/9.150</td><td>Juiz de Fora</td></tr>
       </tbody>
     </table>
   </div>
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
