--- a/index.html
+++ b/index.html
@@ -184,11 +184,30 @@
         <tr><td>🔹Entrega de arma para manutenção espingarda 12 (94774)</td><td>202511111218898-2511</td><td>
 
       </tbody>
+
+      <div class="section">
+    <h2>📦 AFERIÇÃO DO ETILÔMETRO DO 2º BPM NO BPMRV/ALMOX/CPE</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>N° Patromônio</th>
+          <th>Descrição</th>
+          <th>Modelo</th>
+          <th>N° Série</th>
+          <th>Unidade</th>
+          <th>Destino</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr><td>🔹2696085</td><td>Etilômetro</td><td><td>BAF-300</td><td><td>07579</td><td><td>28 CIA TM/2 BPM</td><td>
+            
+      </tbody>
     </table>
   </div>
 
 </body>
 </html>
+
 
 
 
