Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -189,8 +189,29 @@
     </table>
   </div>
 
+<div class="section">
+    <h2>📦 AFERIÇÃO DO ETILÔMETRO DO 2º BPM NO BPMRV/ALMOX/CPE</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>N° Patromônio</th>
+          <th>Descrição</th>
+          <th>Modelo</th>
+          <th>N° Série</th>
+          <th>Unidade</th>
+          <th>Destino</th>
+          </tr>
+      </thead>
+      <tbody>
+        <tr><td>🔹2696085</td><td>Etilômetro</td><td><td>BAF-300</td><td><td>07579</td><td><td>28 CIA TM/2 BPM</td><td>
+            
+      </tbody>
+      </table>
+      </div>
+  
 </body>
 </html>
+
 
 
 
