Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -8,10 +8,10 @@
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom, khaki 50%, black 50%);
       margin: 20px;
-      color: 000080;
+      color: #000080; /* Corrigido */
     }
     h1 {
-      color: f0e68c;
+      color: #f0e68c; /* Corrigido */
       text-align: center;
     }
     .section {
@@ -66,7 +66,12 @@
         </tr>
       </thead>
       <tbody>
-        <td>18226</td><td>HNH 1274</td><td>Caminhão VW/9.150</td><td>Juiz de Fora</td></tr>
+        <tr>
+          <td>18226</td>
+          <td>HNH 1274</td>
+          <td>Caminhão VW/9.150</td>
+          <td>Juiz de Fora</td>
+        </tr>
       </tbody>
     </table>
   </div>
@@ -170,26 +175,26 @@
       </tbody>
     </table>
   </div>
-   <div class="section">
+
+  <div class="section">
     <h2>📦 DEMANDAS DA SAT/EM4ªRPM NO CMB</h2>
     <table>
       <thead>
         <tr>
           <th>Descrição da Arma/Item</th>
           <th>Agendamento PA</th>
-          </tr>
+        </tr>
       </thead>
       <tbody>
-        <tr><td>🔹Revólver 2º Tenente QOR Webert – QE73243</td><td>202511111017827-2511</td><td>
-        <tr><td>🔹08 (oito) fuzis 7,62 NATO IWI ARAD R7</td><td>202511110978644-2511</td><td>
-        <tr><td>🔹Retirada de armas na manutenção pistola .40 (série - EKA41811)</td><td>202511111208739-2511</td><td>
-        <tr><td>🔹Entrega de arma para manutenção espingarda 12 (94774)</td><td>202511111218898-2511</td><td>
-
+        <tr><td>🔹Revólver 2º Tenente QOR Webert – QE73243</td><td>202511111017827-2511</td></tr>
+        <tr><td>🔹08 (oito) fuzis 7,62 NATO IWI ARAD R7</td><td>202511110978644-2511</td></tr>
+        <tr><td>🔹Retirada de armas na manutenção pistola .40 (série - EKA41811)</td><td>202511111208739-2511</td></tr>
+        <tr><td>🔹Entrega de arma para manutenção espingarda 12 (94774)</td><td>202511111218898-2511</td></tr>
       </tbody>
     </table>
   </div>
 
-<div class="section">
+  <div class="section">
     <h2>📦 AFERIÇÃO DO ETILÔMETRO DO 2º BPM NO BPMRV/ALMOX/CPE</h2>
     <table>
       <thead>
@@ -200,31 +205,20 @@
           <th>N° Série</th>
           <th>Unidade</th>
           <th>Destino</th>
-          </tr>
+        </tr>
       </thead>
       <tbody>
-        <tr><td>🔹2696085</td><td>Etilômetro</td><td><td>BAF-300</td><td><td>07579</td><td><td>28 CIA TM/2 BPM</td><td>
-            
+        <tr>
+          <td>🔹2696085</td>
+          <td>Etilômetro</td>
+          <td>BAF-300</td>
+          <td>07579</td>
+          <td>28 CIA TM/2 BPM</td>
+          <td></td>
+        </tr>
       </tbody>
-      </table>
-      </div>
+    </table>
+  </div>
   
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
