--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -199,7 +199,7 @@
   <table>
     <thead>
       <tr>
-        <th>N° Patrimônio</th>
+        <th>N° Patrimonio</th>
         <th>Descrição</th>
         <th>Modelo</th>
         <th>N° Série</th>
@@ -223,4 +223,5 @@
   
 </body>
 </html>
+
 
