Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -11,7 +11,7 @@
       color: #000080; /* Corrigido */
     }
     h1 {
-      color: #f0e68c; /* Corrigido */
+      color: #0000; /* Corrigido */
       text-align: center;
     }
     .section {
@@ -221,6 +221,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
