--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -217,9 +217,32 @@
       </tr>
     </tbody>
   </table>
+
+  <div class="section">
+  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUITE ENDEREÇO</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Rua</th>
+        <th>número</th>
+        <th>Cidade</th>
+        <th>N° Série</th>
+        <th>Unidade</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Avenida José Candido da Silveira</td>
+        <td>420, Apto n° 303</td>
+        <td>Belo Hozizonte</td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
 </div> 
 </body>
 </html>
+
 
 
 
