--- a/index.html
+++ b/index.html
@@ -223,11 +223,10 @@
   <table>
     <thead>
       <tr>
+        <th>Descrição</th>
         <th>Rua</th>
         <th>número</th>
         <th>Cidade</th>
-        <th>N° Série</th>
-        <th>Unidade</th>
         </tr>
     </thead>
     <tbody>
@@ -242,6 +241,7 @@
 </div>
 </body>
 </html>
+
 
 
 
