--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
     </thead>
     <tbody>
       <tr>
+        <td>Drone</td>
         <td>Avenida José Candido da Silveira</td>
         <td>420, Apto n° 303</td>
         <td>Belo Hozizonte</td>
@@ -241,6 +242,7 @@
 </div>
 </body>
 </html>
+
 
 
 
