--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -219,7 +219,7 @@
   </table>
 
   <div class="section">
-  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUITE ENDEREÇO</h2>
+  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO</h2>
   <table>
     <thead>
       <tr>
@@ -242,6 +242,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
