--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -219,13 +219,14 @@
   </table>
 
   <div class="section">
-  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO</h2>
+  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO Daniel Augusto</h2>
   <table>
     <thead>
       <tr>
         <th>Rua</th>
         <th>número</th>
         <th>Cidade</th>
+        <th>Telefone</th>
         
         </tr>
     </thead>
@@ -235,6 +236,7 @@
         <td>Avenida José Candido da Silveira</td>
         <td>420, Apto n° 303</td>
         <td>Belo Hozizonte</td>
+        <td>(31) 99798-1978</td>
         <td></td>
       </tr>
     </tbody>
@@ -242,6 +244,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
