--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
   </table>
 
   <div class="section">
-  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO</h2>
+  <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO (Procurar Daniel Augusto)</h2>
   <table>
     <thead>
       <tr>
@@ -227,6 +227,7 @@
         <th>Rua</th>
         <th>número</th>
         <th>Cidade</th>
+        <th>Telefone</th>
         </tr>
     </thead>
     <tbody>
@@ -235,6 +236,7 @@
         <td>Avenida José Candido da Silveira</td>
         <td>420, Apto n° 303</td>
         <td>Belo Hozizonte</td>
+        <td>(31) 99798-1878</td>
         <td></td>
       </tr>
     </tbody>
@@ -242,6 +244,7 @@
 </div>
 </body>
 </html>
+
 
 
 
