--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       </tr>
     </tbody>
   </table>
-
+</div>
   <div class="section">
   <h2>📦 FAZER A RETIRADA DO DRONE NO SEGUINTE ENDEREÇO (Procurar Daniel Augusto)</h2>
   <table>
@@ -244,6 +244,7 @@
 </div>
 </body>
 </html>
+
 
 
 
