Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -8,7 +8,7 @@
       font-family: Arial, sans-serif;
       background: linear-gradient(to bottom, khaki 50%, black 50%);
       margin: 20px;
-      color: #000080; /* Corrigido */
+      color: #a18f63; /* Corrigido */
     }
     h1 {
       color: #0000; /* Corrigido */
@@ -244,6 +244,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
