--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       text-align: center;
     }
     .section {
-      background-color: #A08F61;
+      background-color: #fff;
       border-radius: 8px;
       padding: 15px;
       margin-bottom: 20px;
@@ -244,6 +244,7 @@
 </div>
 </body>
 </html>
+
 
 
 
