Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -22,7 +22,7 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
     .section h2 {
-      color: #2980b9;
+      color: #000000;
       margin-bottom: 10px;
     }
     ul {
@@ -244,6 +244,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
