Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -41,7 +41,7 @@
       border-collapse: collapse;
     }
     th {
-      background-color: #ecf0f1;
+      background-color: #A08F61;
     }
     th, td {
       border: 1px solid #ccc;
@@ -244,6 +244,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
