--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       border-collapse: collapse;
     }
     th {
-      background-color: #A08F61;
+      background-color: #ecf0f1;
     }
     th, td {
       border: 1px solid #ccc;
@@ -244,6 +244,7 @@
 </div>
 </body>
 </html>
+
 
 
 
