Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -6,6 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background: linear-gradient(to bottom, #A08F61 50%, black 50%);
       background: linear-gradient(to bottom, khaki 50%, black 50%);
       margin: 20px;
       color: #000080; /* Corrigido */
@@ -244,6 +245,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
