Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -6,7 +6,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, black 50%, #A08F61 50%);
+      background: linear-gradient(to bottom, #A08F61 50%, black 50%);
       color: #000080; /* Corrigido */
     }
     h1 {
@@ -243,6 +243,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
