Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -5,9 +5,10 @@
   <title>Inventário DSP Belo Horizonte</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, #A08F61 50%, black 50%);
-      color: #000080; /* Corrigido */
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to bottom, #A08F61 50%, black 50%);
+  margin: 20px;
+  color: #000080; /* Corrigido */
     }
     h1 {
       color: #000080; /* Corrigido */
@@ -243,6 +244,7 @@
 </div> 
 </body>
 </html>
+
 
 
 
