Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -86,12 +86,13 @@
           <th>Modelo</th>
           <th>Unidade</th>
           <th>Local</th>
+           <th>OBS</th>
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
-        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
-        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
+        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
       </tbody>
     </table>
   </div>
@@ -238,12 +239,47 @@
         <td>Belo Hozizonte</td>
         <td>(31) 99798-1978</td>
         <td></td>
+
+        <div class="section">
+  <h2>📦 MATERIAS RETIRADOS NO CSA/TIC ALMOXARIFADO</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>N° Patrimônio</th>
+        <th>Descrição</th>
+        <th>Modelo</th>
+        <th>Unidade</th>
+        <th>Local</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101200480</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        <td>101200420</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        <td>101200501</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        </tr>
       </tr>
     </tbody>
   </table>
 </div> 
 </body>
 </html>
+
 
 
 
