--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
-        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
-        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr>
+        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
       </tbody>
     </table>
   </div>
@@ -149,7 +149,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹128973994</td><td>Gateway para sistema VoIP - 04 portas</td><td>GRANDSTREAM/UCM6302</td><td>21 BPM</td><td>Ubá</td></tr>
+        <tr><td>🔹128973994</td><td>Gateway para sistema VoIP - 04 portas</td><td>GRANDSTREAM/UCM6302</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
       </tbody>
     </table>
   </div>
@@ -242,8 +242,46 @@
     </tbody>
   </table>
 </div>
+
+  <div class="section">
+  <h2>📦 MATERIAS RETIRADOS NO CSA/TIC ALMOXARIFADO</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>N° Patrimônio</th>
+        <th>Descrição</th>
+        <th>Modelo</th>
+        <th>Unidade</th>
+        <th>Local</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101200480</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        <td>101200420</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        <td>101200501</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+        <td></td>
+        </tr>
+    </tbody>
+  </table>
+</div>
 </body>
 </html>
+
 
 
 
