--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <th>Modelo</th>
           <th>Unidade</th>
           <th>Local</th>
+          <th>OBS</th>
         </tr>
       </thead>
       <tbody>
@@ -281,6 +282,7 @@
 </div>
 </body>
 </html>
+
 
 
 
