--- a/index.html
+++ b/index.html
@@ -277,11 +277,54 @@
         <td>Juiz de Fora</td>
         <td></td>
         </tr>
+
+
+
+
+
+      <div class="section">
+  <h2>📦 MATERIAIS RETIRADOS NO CSA/TIC ALMOXARIFADO</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>N° Patrimônio</th>
+        <th>Descrição</th>
+        <th>Modelo</th>
+        <th>Unidade</th>
+        <th>Local</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101200480</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+      </tr>
+      <tr>
+        <td>101200420</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+      </tr>
+      <tr>
+        <td>101200501</td>
+        <td>COMPUTADOR</td>
+        <td>LENOVO</td>
+        <td>EM4RPM</td>
+        <td>Juiz de Fora</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
     </tbody>
   </table>
 </div>
 </body>
 </html>
+
 
 
 
