--- a/index.html
+++ b/index.html
@@ -97,6 +97,49 @@
     </table>
   </div>
 
+
+
+
+<table>
+  <thead>
+    <tr>
+      <th>N° Patrimônio</th>
+      <th>Descrição</th>
+      <th>Modelo</th>
+      <th>Unidade</th>
+      <th>Local</th>
+      <th>Observação</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>🔹128944145</td>
+      <td>Rádio Portátil</td>
+      <td>Tait TP-9660</td>
+      <td>21 BPM</td>
+      <td>Ubá</td>
+      <td>Não foi retirado, não estava configurado</td>
+    </tr>
+    <tr>
+      <td>🔹128944153</td>
+      <td>Rádio Portátil</td>
+      <td>Tait TP-9660</td>
+      <td>21 BPM</td>
+      <td>Ubá</td>
+      <td>Não foi retirado, não estava configurado</td>
+    </tr>
+    <tr>
+      <td>🔹128944161</td>
+      <td>Rádio Portátil</td>
+      <td>Tait TP-9660</td>
+      <td>21 BPM</td>
+      <td>Ubá</td>
+      <td>Não foi retirado, não estava configurado</td>
+    </tr>
+  </tbody>
+</table>
+  
+
   <div class="section">
     <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 81)</h2>
     <table>
@@ -286,6 +329,7 @@
 </div>
 </body>
 </html>
+
 
 
 
