--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
       <td>21 BPM</td>
       <td>Ubá</td>
       <td>Não foi retirado, não estava configurado</td>
-    </tr>
-  </tbody>
-</table>
+ </tr>
+      </tbody>
+    </table>
+  </div>
   
 
   <div class="section">
@@ -138,6 +139,7 @@
         <tr><td>🔹101181248</td><td>Impressora</td><td>EPSON/ ECOTANK L3250</td><td>EM4RPM</td><td>Juiz de Fora</td></tr>
         <tr><td>🔹101181256</td><td>Impressora</td><td>EPSON/ ECOTANK L3250</td><td>EM4RPM</td><td>Juiz de Fora</td></tr>
         <tr><td>🔹101181264</td><td>Impressora</td><td>EPSON/ ECOTANK L3250</td><td>EM4RPM</td><td>Juiz de Fora</td></tr>
+     </tr>
       </tbody>
     </table>
   </div>
@@ -152,9 +154,10 @@
           <th>Modelo</th>
           <th>Unidade</th>
           <th>Local</th>
-        </tr>
-      </thead>
-      <tbody>
+       </tr>
+      </tbody>
+    </table>
+  </div>
         <tr><td>🔹128928833</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
         <tr><td>🔹128928891</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
         <tr><td>🔹128928905</td><td>Impressora</td><td>HP/LASERJET 400DW</td><td>10 CIA PM IND</td><td>Viçosa</td></tr>
@@ -311,6 +314,7 @@
 </div>
 </body>
 </html>
+
 
 
 
