--- a/index.html
+++ b/index.html
@@ -176,11 +176,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹128973994</td><td>Gateway para sistema VoIP - 04 portas</td><td>GRANDSTREAM/UCM6302</td><td>21 BPM</td><td>Ubá</td></tr><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128973994</td>
+          <td>Gateway para sistema VoIP - 04 portas</td>
+          <td>GRANDSTREAM/UCM6302</td>
+          <td>21 BPM</td>
+          <td>Ubá</td></tr>
+        <td>Não foi retirado, não estava confiugurado</td></tr>
+      </tr>
       </tbody>
     </table>
   </div>
-
 
   <div class="section">
     <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 86)</h2>
@@ -312,6 +317,7 @@
 </div>
 </body>
 </html>
+
 
 
 
