--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
           <td>Gateway para sistema VoIP - 04 portas</td>
           <td>GRANDSTREAM/UCM6302</td>
           <td>21 BPM</td>
-          <td>Ubá</td></tr>
-        <td>Não foi retirado, não estava confiugurado</td></tr>
+          <td>Ubá</td>
+        <td>Não foi retirado, não estava confiugurado</tr>
       </tr>
       </tbody>
     </table>
@@ -317,6 +317,7 @@
 </div>
 </body>
 </html>
+
 
 
 
