--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
           <th>Modelo</th>
           <th>Unidade</th>
           <th>Local</th>
+          <th>Observação</th>
         </tr>
       </thead>
       <tbody>
@@ -317,6 +318,7 @@
 </div>
 </body>
 </html>
+
 
 
 
