--- a/index.html
+++ b/index.html
@@ -164,29 +164,30 @@
   </div>
 
   <div class="section">
-    <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 85)</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>N° Patrimônio</th>
-          <th>Descrição</th>
-          <th>Modelo</th>
-          <th>Unidade</th>
-          <th>Local</th>
-          <th>Observação</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>🔹128973994</td>
-          <td>Gateway para sistema VoIP - 04 portas</td>
-          <td>GRANDSTREAM/UCM6302</td>
-          <td>21 BPM</td>
-          <td>Ubá</td>
-        <td>Não foi retirado, não estava confiugurado</tr>
+  <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 85)</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>N° Patrimônio</th>
+        <th>Descrição</th>
+        <th>Modelo</th>
+        <th>Unidade</th>
+        <th>Local</th>
+        <th>Observação</th>
       </tr>
-      </tbody>
-    </table>
-  </div>
+    </thead>
+    <tbody>
+      <tr>
+        <td>🔹128973994</td>
+        <td>Gateway para sistema VoIP - 04 portas</td>
+        <td>GRANDSTREAM/UCM6302</td>
+        <td>21 BPM</td>
+        <td>Ubá</td>
+        <td>Não foi retirado, não estava configurado</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
   <div class="section">
     <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 86)</h2>
@@ -318,6 +319,7 @@
 </div>
 </body>
 </html>
+
 
 
 
