--- a/index.html
+++ b/index.html
@@ -190,25 +190,54 @@
 </div>
 
   <div class="section">
-    <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 86)</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>N° Patrimônio</th>
-          <th>Descrição</th>
-          <th>Modelo</th>
-          <th>Unidade</th>
-          <th>Local</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr><td>🔹128934239</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
-        <tr><td>🔹128934247</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>27 BPM</td><td>OLARIA</td></tr>
-        <tr><td>🔹128934093</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>47 BPM</td><td>CARANGOLA</td></tr>
-        <tr><td>🔹128973862</td><td>Nobreak</td><td>CR/3KVA</td><td>47 BPM</td><td>CARANGOLA</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <h2>📦 RETIRAR NO CSA-TIC/Almoxarifado (BGPM NÚMERO 86)</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>N° Patrimônio</th>
+        <th>Descrição</th>
+        <th>Modelo</th>
+        <th>Unidade</th>
+        <th>Local</th>
+        <th>Observação</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>🔹128934239</td>
+        <td>Rádio Portátil</td>
+        <td>Tait TP-9660</td>
+        <td>27 BPM</td>
+        <td>OLARIA</td>
+        <td>Não foi retirado, não estava configurado</td>
+      </tr>
+      <tr>
+        <td>🔹128934247</td>
+        <td>Rádio Portátil</td>
+        <td>Tait TP-9660</td>
+        <td>27 BPM</td>
+        <td>OLARIA</td>
+        <td>Não foi retirado, não estava configurado</td>
+      </tr>
+      <tr>
+        <td>🔹128934093</td>
+        <td>Rádio Portátil</td>
+        <td>Tait TP-9660</td>
+        <td>47 BPM</td>
+        <td>CARANGOLA</td>
+        <td>Não foi retirado, não estava configurado</td>
+      </tr>
+      <tr>
+        <td>🔹128973862</td>
+        <td>Nobreak</td>
+        <td>CR/3KVA</td>
+        <td>47 BPM</td>
+        <td>CARANGOLA</td>
+        <td>Não foi retirado, não estava configurado</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
   <div class="section">
     <h2>📦 DEMANDAS DA SAT/EM4ªRPM NO CMB</h2>
@@ -319,6 +348,7 @@
 </div>
 </body>
 </html>
+
 
 
 
