--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
         <th>Modelo</th>
         <th>N° Série</th>
         <th>Unidade</th>
+        <th>PA de Agendamento</th>
+        <th>Recebido por</th>
         </tr>
     </thead>
     <tbody>
@@ -276,7 +278,8 @@
         <td>BAF-300</td>
         <td>07579</td>
         <td>28 CIA TM/2 BPM</td>
-        <td></td>
+        <th>202511111242975-2511</th>
+        <td>n° 159.205-4 Cb Pm</td>
       </tr>
     </tbody>
   </table>
@@ -348,6 +351,7 @@
 </div>
 </body>
 </html>
+
 
 
 
