--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <td>07579</td>
         <td>28 CIA TM/2 BPM</td>
         <th>202511111242975-2511</th>
-        <td>n° 159.205-4 Cb Pm Joviano Ferreira da SilvaS TIC/EMCPE</td>
+        <td>n° 159.205-4 Cb Pm Joviano Ferreira da Silva</td>
         <td>S TIC/EMCPE</td>
         
       </tr>
@@ -354,6 +354,7 @@
 </div>
 </body>
 </html>
+
 
 
 
