Update dsp belo horizonte 051125.html

--- a/dsp belo horizonte 051125.html
+++ b/dsp belo horizonte 051125.html
@@ -90,9 +90,9 @@
         </tr>
       </thead>
       <tbody>
-        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado, não estava confiugurado</td></tr>
-        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado, não estava confiugurado</td></tr>
-        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado, não estava confiugurado</td></tr>
+        <tr><td>🔹128944145</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado não estava confiugurado</td></tr>
+        <tr><td>🔹128944153</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado não estava confiugurado</td></tr>
+        <tr><td>🔹128944161</td><td>Rádio Portátil</td><td>Tait TP-9660</td><td>21 BPM</td><td>Ubá</td></tr><td><td>Não foi retirado não estava confiugurado</td></tr>
       </tbody>
     </table>
   </div>
